# d3video

./: LICENSE  README.md  d3video.py  pyproject.toml
.github/workflows/: ci.yml
demo/: benchmark.json
tests/: test_benchmark.py
